# final-year-project

./: .gitignore  README.md  UDP.py  app.py  columnExtraction.py  pyproject.toml  realTime.py  realtime_detection.py  requirements.txt  research projects.docx  supervised.py  supervisedsync.py  unsupervised.py  unsupervisedsync.py
hello/: hello.py
hello/03-11/: .~lock.UDPLag.csv#
templates/: base.html  index.html  monitor.html
